# Cashflow-AI

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: secrets.toml.example
app/: __init__.py  constants.py  fraud_report_openai.py  fraud_report_payload.py  fraud_scoring.py  graph.py  graph_template.py  ingestion.py  md_to_docx.py  md_to_pdf.py  rag_chroma.py
data/: HKT_Rapport (1).xlsx - Sheet1.csv
static/: cashflow_graph.html
