[project]
name = "cashflow-fraud-streamlit"
version = "0.1.0"
description = "Streamlit cashflow monitor with multi-format transaction mapping, fraud heuristics, and D3 visualization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.2.1",
    "openai>=1.40.0",
    "pandas>=3.0.2",
    "streamlit>=1.56.0",
]
